src/snapshots/pbsql__object_name_replacer__tests__and_another.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - "select \"id\""
    - from (
    - "    select"
    - "        \"~/books/things\".\"id\" as \"id\","
    - "        0 as \"num_matches\""
    - "    from \"~/books/things\""
    - "    left join \"~/books/matches\" on ("
    - "        \"~/books/matches\".\"winner_id\" = \"~/books/things\".\"id\""
    - "        or \"~/books/matches\".\"loser_id\" = \"~/books/things\".\"id\""
    - "    )"
    - "    where \"~/books/matches\".\"loser_id\" is null"
    - ""
    - "    union all"
    - ""
    - "    select \"winner_id\" as \"id\", 1 as \"num_matches\""
    - "    from \"~/books/matches\""
    - ""
    - "    union all"
    - ""
    - "    select \"loser_id\" as \"id\", 1 as \"num_matches\""
    - "    from \"~/books/matches\""
    - ") as \"sq\""
    - "group by \"id\""
    - "order by sum(\"num_matches\")"
    - limit ?
  names_to_replace:
    indices_to_replace: {}
    relations_to_replace:
      ? - ~/books/matches
      : - my_books
        - matches
      ? - ~/books/things
      : - my_books
        - tbl
  output_query:
    - SELECT
    - "  \"id\""
    - FROM
    - "  ("
    - "    SELECT"
    - "      my_books.tbl.id AS \"id\","
    - "      0 AS \"num_matches\""
    - "    FROM"
    - "      my_books.tbl"
    - "      LEFT JOIN my_books.matches ON ("
    - "        my_books.matches.winner_id = my_books.tbl.id"
    - "        OR my_books.matches.loser_id = my_books.tbl.id"
    - "      )"
    - "    WHERE"
    - "      my_books.matches.loser_id IS NULL"
    - "    UNION"
    - "    ALL"
    - "    SELECT"
    - "      \"winner_id\" AS \"id\","
    - "      1 AS \"num_matches\""
    - "    FROM"
    - "      my_books.matches"
    - "    UNION"
    - "    ALL"
    - "    SELECT"
    - "      \"loser_id\" AS \"id\","
    - "      1 AS \"num_matches\""
    - "    FROM"
    - "      my_books.matches"
    - "  ) AS \"sq\""
    - GROUP BY
    - "  \"id\""
    - ORDER BY
    - "  sum(\"num_matches\")"
    - LIMIT
    - "  ?"
  output_ast:
    - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - UnnamedExpr:
                  Identifier:
                    value: id
                    quote_style: "\""
            into: ~
            from:
              - relation:
                  Derived:
                    lateral: false
                    subquery:
                      with: ~
                      body:
                        SetOperation:
                          op: Union
                          set_quantifier: All
                          left:
                            SetOperation:
                              op: Union
                              set_quantifier: All
                              left:
                                Select:
                                  distinct: ~
                                  top: ~
                                  projection:
                                    - ExprWithAlias:
                                        expr:
                                          CompoundIdentifier:
                                            - value: my_books
                                              quote_style: ~
                                            - value: tbl
                                              quote_style: ~
                                            - value: id
                                              quote_style: ~
                                        alias:
                                          value: id
                                          quote_style: "\""
                                    - ExprWithAlias:
                                        expr:
                                          Value:
                                            Number:
                                              - "0"
                                              - false
                                        alias:
                                          value: num_matches
                                          quote_style: "\""
                                  into: ~
                                  from:
                                    - relation:
                                        Table:
                                          name:
                                            - value: my_books
                                              quote_style: ~
                                            - value: tbl
                                              quote_style: ~
                                          alias: ~
                                          args: ~
                                          with_hints: []
                                          version: ~
                                          partitions: []
                                      joins:
                                        - relation:
                                            Table:
                                              name:
                                                - value: my_books
                                                  quote_style: ~
                                                - value: matches
                                                  quote_style: ~
                                              alias: ~
                                              args: ~
                                              with_hints: []
                                              version: ~
                                              partitions: []
                                          join_operator:
                                            LeftOuter:
                                              "On":
                                                Nested:
                                                  BinaryOp:
                                                    left:
                                                      BinaryOp:
                                                        left:
                                                          CompoundIdentifier:
                                                            - value: my_books
                                                              quote_style: ~
                                                            - value: matches
                                                              quote_style: ~
                                                            - value: winner_id
                                                              quote_style: ~
                                                        op: Eq
                                                        right:
                                                          CompoundIdentifier:
                                                            - value: my_books
                                                              quote_style: ~
                                                            - value: tbl
                                                              quote_style: ~
                                                            - value: id
                                                              quote_style: ~
                                                    op: Or
                                                    right:
                                                      BinaryOp:
                                                        left:
                                                          CompoundIdentifier:
                                                            - value: my_books
                                                              quote_style: ~
                                                            - value: matches
                                                              quote_style: ~
                                                            - value: loser_id
                                                              quote_style: ~
                                                        op: Eq
                                                        right:
                                                          CompoundIdentifier:
                                                            - value: my_books
                                                              quote_style: ~
                                                            - value: tbl
                                                              quote_style: ~
                                                            - value: id
                                                              quote_style: ~
                                  lateral_views: []
                                  selection:
                                    IsNull:
                                      CompoundIdentifier:
                                        - value: my_books
                                          quote_style: ~
                                        - value: matches
                                          quote_style: ~
                                        - value: loser_id
                                          quote_style: ~
                                  group_by:
                                    Expressions: []
                                  cluster_by: []
                                  distribute_by: []
                                  sort_by: []
                                  having: ~
                                  named_window: []
                                  qualify: ~
                              right:
                                Select:
                                  distinct: ~
                                  top: ~
                                  projection:
                                    - ExprWithAlias:
                                        expr:
                                          Identifier:
                                            value: winner_id
                                            quote_style: "\""
                                        alias:
                                          value: id
                                          quote_style: "\""
                                    - ExprWithAlias:
                                        expr:
                                          Value:
                                            Number:
                                              - "1"
                                              - false
                                        alias:
                                          value: num_matches
                                          quote_style: "\""
                                  into: ~
                                  from:
                                    - relation:
                                        Table:
                                          name:
                                            - value: my_books
                                              quote_style: ~
                                            - value: matches
                                              quote_style: ~
                                          alias: ~
                                          args: ~
                                          with_hints: []
                                          version: ~
                                          partitions: []
                                      joins: []
                                  lateral_views: []
                                  selection: ~
                                  group_by:
                                    Expressions: []
                                  cluster_by: []
                                  distribute_by: []
                                  sort_by: []
                                  having: ~
                                  named_window: []
                                  qualify: ~
                          right:
                            Select:
                              distinct: ~
                              top: ~
                              projection:
                                - ExprWithAlias:
                                    expr:
                                      Identifier:
                                        value: loser_id
                                        quote_style: "\""
                                    alias:
                                      value: id
                                      quote_style: "\""
                                - ExprWithAlias:
                                    expr:
                                      Value:
                                        Number:
                                          - "1"
                                          - false
                                    alias:
                                      value: num_matches
                                      quote_style: "\""
                              into: ~
                              from:
                                - relation:
                                    Table:
                                      name:
                                        - value: my_books
                                          quote_style: ~
                                        - value: matches
                                          quote_style: ~
                                      alias: ~
                                      args: ~
                                      with_hints: []
                                      version: ~
                                      partitions: []
                                  joins: []
                              lateral_views: []
                              selection: ~
                              group_by:
                                Expressions: []
                              cluster_by: []
                              distribute_by: []
                              sort_by: []
                              having: ~
                              named_window: []
                              qualify: ~
                      order_by: []
                      limit: ~
                      limit_by: []
                      offset: ~
                      fetch: ~
                      locks: []
                      for_clause: ~
                    alias:
                      name:
                        value: sq
                        quote_style: "\""
                      columns: []
                joins: []
            lateral_views: []
            selection: ~
            group_by:
              Expressions:
                - Identifier:
                    value: id
                    quote_style: "\""
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by:
          - expr:
              Function:
                name:
                  - value: sum
                    quote_style: ~
                args:
                  - Unnamed:
                      Expr:
                        Identifier:
                          value: num_matches
                          quote_style: "\""
                filter: ~
                null_treatment: ~
                over: ~
                distinct: false
                special: false
                order_by: []
            asc: ~
            nulls_first: ~
        limit:
          Value:
            Placeholder: "?"
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
