src/snapshots/pbsql__object_name_replacer__tests__another_select.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - SELECT
    - "    COUNT(*) AS \"rank0\""
    - "FROM \"~/books/eloScores\" AS \"eloScores\""
    - "JOIN \"~/books/eloScores\" AS \"comparisonScore\""
    - "    ON eloScores.thingId = ?"
    - "JOIN \"~/books/things\" AS \"books\""
    - "    ON books.id = eloScores.thingId"
    - WHERE
    - "    books.excluded = ?"
    - "    AND ("
    - "        eloScores.score > comparisonScore.score"
    - "        OR ("
    - eloScores.score = comparisonScore.score
    - AND eloScores.thingId > comparisonScore.thingId
    - "        )"
    - "    )"
    - LIMIT ? OFFSET ?
  names_to_replace:
    indices_to_replace: {}
    relations_to_replace:
      ? - ~/books/eloScores
      : - my_books
        - tbl
      ? - ~/books/things
      : - my_books
        - tbl
  output_query:
    - SELECT
    - "  COUNT(*) AS \"rank0\""
    - FROM
    - "  my_books.tbl AS \"eloScores\""
    - "  JOIN my_books.tbl AS \"comparisonScore\" ON \"eloScores\".thingId = ?"
    - "  JOIN my_books.tbl AS \"books\" ON \"books\".id = \"eloScores\".thingId"
    - WHERE
    - "  \"books\".excluded = ?"
    - "  AND ("
    - "    \"eloScores\".score > \"comparisonScore\".score"
    - "    OR ("
    - "      \"eloScores\".score = \"comparisonScore\".score"
    - "      AND \"eloScores\".thingId > \"comparisonScore\".thingId"
    - "    )"
    - "  )"
    - LIMIT
    - "  ? OFFSET ?"
  output_ast:
    - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - ExprWithAlias:
                  expr:
                    Function:
                      name:
                        - value: COUNT
                          quote_style: ~
                      args:
                        - Unnamed: Wildcard
                      filter: ~
                      null_treatment: ~
                      over: ~
                      distinct: false
                      special: false
                      order_by: []
                  alias:
                    value: rank0
                    quote_style: "\""
            into: ~
            from:
              - relation:
                  Table:
                    name:
                      - value: my_books
                        quote_style: ~
                      - value: tbl
                        quote_style: ~
                    alias:
                      name:
                        value: eloScores
                        quote_style: "\""
                      columns: []
                    args: ~
                    with_hints: []
                    version: ~
                    partitions: []
                joins:
                  - relation:
                      Table:
                        name:
                          - value: my_books
                            quote_style: ~
                          - value: tbl
                            quote_style: ~
                        alias:
                          name:
                            value: comparisonScore
                            quote_style: "\""
                          columns: []
                        args: ~
                        with_hints: []
                        version: ~
                        partitions: []
                    join_operator:
                      Inner:
                        "On":
                          BinaryOp:
                            left:
                              CompoundIdentifier:
                                - value: eloScores
                                  quote_style: "\""
                                - value: thingId
                                  quote_style: ~
                            op: Eq
                            right:
                              Value:
                                Placeholder: "?"
                  - relation:
                      Table:
                        name:
                          - value: my_books
                            quote_style: ~
                          - value: tbl
                            quote_style: ~
                        alias:
                          name:
                            value: books
                            quote_style: "\""
                          columns: []
                        args: ~
                        with_hints: []
                        version: ~
                        partitions: []
                    join_operator:
                      Inner:
                        "On":
                          BinaryOp:
                            left:
                              CompoundIdentifier:
                                - value: books
                                  quote_style: "\""
                                - value: id
                                  quote_style: ~
                            op: Eq
                            right:
                              CompoundIdentifier:
                                - value: eloScores
                                  quote_style: "\""
                                - value: thingId
                                  quote_style: ~
            lateral_views: []
            selection:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      CompoundIdentifier:
                        - value: books
                          quote_style: "\""
                        - value: excluded
                          quote_style: ~
                    op: Eq
                    right:
                      Value:
                        Placeholder: "?"
                op: And
                right:
                  Nested:
                    BinaryOp:
                      left:
                        BinaryOp:
                          left:
                            CompoundIdentifier:
                              - value: eloScores
                                quote_style: "\""
                              - value: score
                                quote_style: ~
                          op: Gt
                          right:
                            CompoundIdentifier:
                              - value: comparisonScore
                                quote_style: "\""
                              - value: score
                                quote_style: ~
                      op: Or
                      right:
                        Nested:
                          BinaryOp:
                            left:
                              BinaryOp:
                                left:
                                  CompoundIdentifier:
                                    - value: eloScores
                                      quote_style: "\""
                                    - value: score
                                      quote_style: ~
                                op: Eq
                                right:
                                  CompoundIdentifier:
                                    - value: comparisonScore
                                      quote_style: "\""
                                    - value: score
                                      quote_style: ~
                            op: And
                            right:
                              BinaryOp:
                                left:
                                  CompoundIdentifier:
                                    - value: eloScores
                                      quote_style: "\""
                                    - value: thingId
                                      quote_style: ~
                                op: Gt
                                right:
                                  CompoundIdentifier:
                                    - value: comparisonScore
                                      quote_style: "\""
                                    - value: thingId
                                      quote_style: ~
            group_by:
              Expressions: []
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by: []
        limit:
          Value:
            Placeholder: "?"
        limit_by: []
        offset:
          value:
            Value:
              Placeholder: "?"
          rows: None
        fetch: ~
        locks: []
        for_clause: ~
