src/snapshots/pbsql__object_name_replacer__tests__on_conflict_do_nothing.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - "insert into \"~/my-data-scraper/reelgood/shows-and-movies\""
    - "(\"format\", \"isWatched\", \"name\", \"url\", \"imageUrl\")"
    - "values (?, ?, ?, ?, ?)"
    - on conflict do nothing
  names_to_replace:
    ? - ~/my-data-scraper/reelgood/shows-and-movies
    : - shows
      - and
      - movies
  output_query:
    - INSERT INTO
    - "  shows.and.movies (\"format\", \"isWatched\", \"name\", \"url\", \"imageUrl\")"
    - VALUES
    - "  (?, ?, ?, ?, ?) ON CONFLICT DO NOTHING"
  output_ast:
    - Insert:
        or: ~
        ignore: false
        into: true
        table_name:
          - value: shows
            quote_style: ~
          - value: and
            quote_style: ~
          - value: movies
            quote_style: ~
        table_alias: ~
        columns:
          - value: format
            quote_style: "\""
          - value: isWatched
            quote_style: "\""
          - value: name
            quote_style: "\""
          - value: url
            quote_style: "\""
          - value: imageUrl
            quote_style: "\""
        overwrite: false
        source:
          with: ~
          body:
            Values:
              explicit_row: false
              rows:
                - - Value:
                      Placeholder: "?"
                  - Value:
                      Placeholder: "?"
                  - Value:
                      Placeholder: "?"
                  - Value:
                      Placeholder: "?"
                  - Value:
                      Placeholder: "?"
          order_by: []
          limit: ~
          limit_by: []
          offset: ~
          fetch: ~
          locks: []
          for_clause: ~
        partitioned: ~
        after_columns: []
        table: false
        "on":
          OnConflict:
            conflict_target: ~
            action: DoNothing
        returning: ~
        replace_into: false
        priority: ~
