src/snapshots/pbsql__object_name_replacer__tests__parser_error.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: "sql parser error: Unterminated string literal at Line: 3, Column 62"
