src/snapshots/pbsql__object_name_replacer__tests__select1_with_alias.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - SELECT
    - "    things.id, things.title, things.subtitle, things.image_url, things.external_link,"
    - "    things.external_link_title, things.excluded"
    - "FROM \"~/books/things\" AS \"things\""
    - WHERE things.id = ?
    - LIMIT 1
  names_to_replace:
    ? - ~/books/things
    : - my_books
      - tbl
    ? - ~/something/else/for/fun
    : - hola
      - tbl
  output_query:
    - SELECT
    - "  \"things\".id,"
    - "  \"things\".title,"
    - "  \"things\".subtitle,"
    - "  \"things\".image_url,"
    - "  \"things\".external_link,"
    - "  \"things\".external_link_title,"
    - "  \"things\".excluded"
    - FROM
    - "  my_books.tbl AS \"things\""
    - WHERE
    - "  \"things\".id = ?"
    - LIMIT
    - "  1"
  output_ast:
    - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: things
                      quote_style: "\""
                    - value: id
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: things
                      quote_style: "\""
                    - value: title
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: things
                      quote_style: "\""
                    - value: subtitle
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: things
                      quote_style: "\""
                    - value: image_url
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: things
                      quote_style: "\""
                    - value: external_link
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: things
                      quote_style: "\""
                    - value: external_link_title
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: things
                      quote_style: "\""
                    - value: excluded
                      quote_style: ~
            into: ~
            from:
              - relation:
                  Table:
                    name:
                      - value: my_books
                        quote_style: ~
                      - value: tbl
                        quote_style: ~
                    alias:
                      name:
                        value: things
                        quote_style: "\""
                      columns: []
                    args: ~
                    with_hints: []
                    version: ~
                    partitions: []
                joins: []
            lateral_views: []
            selection:
              BinaryOp:
                left:
                  CompoundIdentifier:
                    - value: things
                      quote_style: "\""
                    - value: id
                      quote_style: ~
                op: Eq
                right:
                  Value:
                    Placeholder: "?"
            group_by:
              Expressions: []
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by: []
        limit:
          Value:
            Number:
              - "1"
              - false
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
