src/snapshots/pbsql__object_name_replacer__tests__select_null.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - SELECT null
  names_to_replace:
    ? - ~/books/eloScores
    : - my_books
      - tbl
  output_query:
    - SELECT
    - "  NULL"
  output_ast:
    - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - UnnamedExpr:
                  Value: "Null"
            into: ~
            from: []
            lateral_views: []
            selection: ~
            group_by:
              Expressions: []
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by: []
        limit: ~
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
