src/snapshots/pbsql__object_name_replacer__tests__select_triplet_identifier.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: "Expected 2 identifiers for the expression name, got: [\"x\", \"y\", \"z\"]"
